* #688 support downloading files with cyrillic name
* #692 added support for `-Dchromeoptions.prefs=profile.block_third_party_cookies=false,profile.avatar_index=26`  -- thanks to Tymur Kubai aka @sirdir
* #686 fix occasional NPE's in SelenideReport  -- thanks to @dkorobtsov
* #478 added method `$$.shouldHave(textsInAnyOrder("Push", "Image", "Email"))`-- thanks @hyunil-shin for PR #589

=== 4.10.01 (released 19.01.2018)
* #672 fixed lazy evaluation of `$$.get(index)`, `$$.first(n)`, `$$.last(n)`, `$$.last()`
* #678 upgrade to webdrivermanager:2.1.0

=== 4.10 (released 12.01.2018)
* #641 Increased Elements Collection performance -- thanks to Artem Savosik @CaBocuk for PR 653
* #639 Add "User-Agent" header when downloading file -- thanks to Aleksandr Rasolka @rosolko
* #556 add possibility to set custom capabilities for custom Chrome options or Firefox profies  --  Thanks to @SergeyPirogov for PR 556 and @BorisOsipov for PR 664
* #660 add possibility to create headless RemoteDriver  -- thanks to @BorisOsipov for PR 661
* #597 support non-breakable spaces in `byText` and `withText`
* #649 Provide scrollIntoView to workaround problems in Firefox
* upgrade to htmlunit 2.29 & guava:23.6-jre
* upgrade to phantomjsdriver 1.4.4

=== 4.9.1 (released 31.12.2017)
* fixed bug where disabled input fields were not handled properly by setValue()
* fixed behaviour of setFastValue, which caused blur event to be ignored
* #654 fixed ClassCastException in WebDriverFactory#logBrowserVersion()

=== 4.9 (released 20.12.2017)
* #638 upgrade to selenium-java:3.8.1  -- thanks to Aleksandr Rasolka
* #621 Make marionette the default firefox driver implementation -- thanks to ostap-oleksyn
* #617 Fix initialization of SelenideElements without @FindBy annotation declared inside ElementsContainer -- thanks to Artem Savosik @CaBocuk
* #623 Add methods `$$(“.item”).first(3)` and `$$(“.item”).last(3)` -- thanks to ostap-oleksyn