@@ -1,7 +1,6 @@
 package integration;
 
 import com.codeborne.selenide.Configuration;
-import com.codeborne.selenide.WebDriverRunner;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -9,46 +8,34 @@ import org.openqa.selenium.Point;
 
 import static com.codeborne.selenide.Selenide.close;
 import static com.codeborne.selenide.Selenide.open;
+import static com.codeborne.selenide.WebDriverRunner.getWebDriver;
 import static com.codeborne.selenide.WebDriverRunner.isHeadless;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assume.assumeFalse;
 
 public class BrowserPositionTest extends IntegrationTest {
-  String position;
-  Point point;
-
   @Before
-  public void prepareTestData() {
-    position = "30x60";
-    String[] coordinates = position.split("x");
-    int x = Integer.parseInt(coordinates[0]);
-    int y = Integer.parseInt(coordinates[1]);
-    point = new Point(x, y);
-  }
-
   @After
   public void closeBrowser() {
+    assumeFalse(isHeadless());
     close();
   }
 
   @Test
   public void ableToSetBrowserPosition() {
-    assumeFalse(isHeadless());
-
-    Configuration.browserPosition = position;
+    Configuration.browserPosition = "30x60";
 
     open("/start_page.html");
 
-    assertEquals(point, WebDriverRunner.getWebDriver().manage().window().getPosition());
+    assertEquals(new Point(30, 60), getWebDriver().manage().window().getPosition());
   }
 
   @Test
-  public void ableToOpenBrowserWithoutPosition() {
-    assumeFalse(isHeadless());
+  public void anotherBrowserPosition() {
+    Configuration.browserPosition = "110x100";
 
     open("/start_page.html");
 
-    assertNotEquals(point, WebDriverRunner.getWebDriver().manage().window().getPosition());
+    assertEquals(new Point(110, 100), getWebDriver().manage().window().getPosition());
   }
 }
